# crypto-trade-analysis

./: .env.example  .gitignore  Dockerfile  README.md  STATUS.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/app/: main.py
src/app/api/v1/: __init__.py  routes_live_data.py  ws_live_data.py
src/app/core/: config.py  logging.py
src/app/integrations/: exchanges.py
src/app/schemas/: live_data.py
src/app/services/: indicators.py  market_data.py
tests/: test_health.py  test_live_data.py  test_live_data_mocked.py
